latte/tests/good/str_gc3.lat
int main() {
  "asd" + "efg";
  printInt(3);
  return 0;
}
