latte/tests/bad/type/func/invalid_return_void2.lat
void f() {
  return 3;
}

int main() {
  return 0;
}
